Fix old Java errors