@@ -147,35 +147,35 @@ public class EventDetailsPage {
 
     public String getFirstAgendaItemName() {
         if (agendaItems.isEmpty()) return null;
-        WebElement agendaItem = agendaItems.getFirst();
+        WebElement agendaItem = agendaItems.get(0);
         return agendaItem.findElement(By.xpath(".//span[contains(@class,'agenda-label') and text()='Name: ']/following-sibling::span[contains(@class,'agenda-value')]"))
                 .getText().trim();
     }
 
     public String getFirstAgendaItemDescription() {
         if (agendaItems.isEmpty()) return null;
-        WebElement agendaItem = agendaItems.getFirst();
+        WebElement agendaItem = agendaItems.get(0);
         return agendaItem.findElement(By.xpath(".//span[contains(@class,'agenda-label') and text()='Description: ']/following-sibling::span[contains(@class,'agenda-value')]"))
                 .getText().trim();
     }
 
     public String getFirstAgendaItemStartTime() {
         if (agendaItems.isEmpty()) return null;
-        WebElement agendaItem = agendaItems.getFirst();
+        WebElement agendaItem = agendaItems.get(0);
         return agendaItem.findElement(By.xpath(".//span[contains(@class,'agenda-label') and text()='Start: ']/following-sibling::span[contains(@class,'agenda-value')]"))
                 .getText().trim();
     }
 
     public String getFirstAgendaItemEndTime() {
         if (agendaItems.isEmpty()) return null;
-        WebElement agendaItem = agendaItems.getFirst();
+        WebElement agendaItem = agendaItems.get(0);
         return agendaItem.findElement(By.xpath(".//span[contains(@class,'agenda-label') and text()='End: ']/following-sibling::span[contains(@class,'agenda-value')]"))
                 .getText().trim();
     }
 
     public String getFirstAgendaItemLocation() {
         if (agendaItems.isEmpty()) return null;
-        WebElement agendaItem = agendaItems.getFirst();
+        WebElement agendaItem = agendaItems.get(0);
         return agendaItem.findElement(By.xpath(".//span[contains(@class,'agenda-label') and text()='Location: ']/following-sibling::span[contains(@class,'agenda-value')]"))
                 .getText().trim();
     }
